# OpenShell

./: .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  TESTING.md  dco-signatures.json  install.sh  mise.toml  pyproject.toml  session-ses_3153.md  vm-gpu-passthrough-implementation.md  vm-gpu-passthrough.md
.github/: VOUCHED.td
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: acceptance-test.yml  branch-checks.yml  branch-e2e.yml  checks.yml  ci-image.yml  cluster-deploy-fast-nightly.yml  dco.yml  docker-build.yml  e2e-test.yml  issue-triage.yml  publish.yml  release-tag.yml  release-vm-dev.yml  vouch-check.yml
architecture/: README.md  build-containers.md  cluster-single-node.md  custom-vm-runtime.md  gateway.md  inference-routing.md  podman-driver.md  policy-prover.md  sandbox-connect.md  sandbox-custom-containers.md  sandbox-providers.md  sandbox.md  system-architecture.md  vm-driver.md
crates/navigator-cli/: Cargo.toml
crates/openshell-bootstrap/: Cargo.toml
crates/openshell-cli/: Cargo.toml
crates/openshell-core/: build.rs
crates/openshell-driver-podman/: Cargo.toml
crates/openshell-driver-vm/: Cargo.toml  README.md  build.rs  start.sh
crates/openshell-driver-vm/scripts/: openshell-vm-sandbox-init.sh
crates/openshell-driver-vm/src/: driver.rs  ffi.rs  lib.rs  main.rs  rootfs.rs  runtime.rs  state_disk.rs
crates/openshell-driver-vm/src/oci/: cache.rs  client.rs  compat.rs  flatten.rs  fs_image.rs  metadata.rs  mod.rs  pipeline.rs
crates/openshell-driver-vm/tests/: oci_pipeline_integration.rs
crates/openshell-server/: Cargo.toml
crates/openshell-vfio/: Cargo.toml
crates/openshell-vfio/src/: lib.rs
crates/openshell-vfio/tests/: gpu_passthrough_implementation.rs
crates/openshell-vm/: Cargo.toml  pins.env
crates/openshell-vm/scripts/: build-rootfs.sh  gateway-init.sh
crates/openshell-vm/src/: ffi.rs  lib.rs  main.rs
crates/openshell-vm/src/backend/: cloud_hypervisor.rs
crates/openshell-vm/tests/: gateway_integration.rs
deploy/docker/: Dockerfile.ci  Dockerfile.cli-macos  Dockerfile.cluster  Dockerfile.driver-vm-macos  Dockerfile.images  Dockerfile.python-wheels  Dockerfile.python-wheels-macos  Dockerfile.server  cluster-entrypoint.sh  cross-build.sh
docs/: index.md
docs/about/: architecture.md  architecture.mdx  overview.md
docs/get-started/: quickstart.md  quickstart.mdx  run-claude.md  (+3 more)
examples/: openclaw.md
scripts/: generate_third_party_notices.py
tasks/: ci.toml  cluster.toml  docker.toml  gator.toml  helm.toml  publish.toml  python.toml  rust.toml  test.toml  vm.toml
(+676 files in other folders)
