# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MicroVM runtime using libkrun for hardware-isolated execution"

[lib]
name = "openshell_vm"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
libc = "0.2"
miette = { workspace = true }
navigator-bootstrap = { path = "../navigator-bootstrap" }
serde_json = "1"
thiserror = { workspace = true }

[lints]
workspace = true
